[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ifcdiff"
version = "0.0.0"
authors = [
  { name="Dion Moult", email="dion@thinkmoult.com" },
]
description = "Compares the differences between two IFC models"
readme = "README.md"
keywords = ["IFC", "Diff"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
]
dependencies = [
    "ifcopenshell",
    "deepdiff",
]

[project.urls]
Homepage = "http://ifcopenshell.org"
Documentation = "https://docs.ifcopenshell.org"
Issues = "https://github.com/IfcOpenShell/IfcOpenShell/issues"

[tool.setuptools]
py-modules = ["ifcdiff"]
