[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ifcfm"
version = "0.0.0"
authors = [
  { name="Dion Moult", email="dion@thinkmoult.com" },
]
description = "Extract data from IFC following facility management standards"
readme = "README.md"
keywords = ["IFC", "FM", "BIM"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
]
dependencies = [
    "ifcopenshell",
    "openpyxl",
    "odfpy",
    "pandas",
]

[project.urls]
Homepage = "http://ifcopenshell.org"
Documentation = "https://docs.ifcopenshell.org"
Issues = "https://github.com/IfcOpenShell/IfcOpenShell/issues"

[tool.setuptools.packages.find]
include = ["ifcfm"]
exclude = ["test*"]
