[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ifcopenshell"
version = "0.7.0.999999"
authors = [
  { name="Dion Moult", email="dion@thinkmoult.com" },
]
description = "Python bindings, utility functions, and high-level API for IfcOpenShell"
readme = "README.md"
requires-python = ">=3.9,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
]
dependencies = ["mathutils", "shapely", "numpy", "isodate", "python-dateutil", "lark"]

[project.urls]
"Homepage" = "http://ifcopenshell.org"
"Bug Tracker" = "https://github.com/ifcopenshell/ifcopenshell/issues"

[tool.setuptools.packages.find]
where = ["dist"]
include = ["ifcopenshell*"]

[tool.setuptools.package-data]
ifcopenshell = ["*.pyd", "*.so", "*.json"]
"ifcopenshell.util" = ["*.json", "schema/*.ifc"]
