[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ifcopenshell"
version = "0.0.0"
authors = [
  { name="Dion Moult", email="dion@thinkmoult.com" },
]
description = "Python bindings, utility functions, and high-level API for IfcOpenShell"
readme = "README.md"
requires-python = ">=3.9,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
]
dependencies = [
    "shapely",
    "numpy",
    "isodate",
    "python-dateutil",
    "lark",
    "typing-extensions",
]

[project.optional-dependencies]
# mathutils is broken on Python < 3.10.
# See: https://gitlab.com/ideasman42/blender-mathutils/-/merge_requests/3
geometry = ["mathutils"]
dev = ["pytest"]

[project.urls]
"Homepage" = "http://ifcopenshell.org"
"Bug Tracker" = "https://github.com/ifcopenshell/ifcopenshell/issues"

[tool.setuptools.packages.find]
include = ["ifcopenshell*"]

[tool.setuptools.package-data]
"*" = ["*.*"]
