[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ifcpatch"
version = "0.0.999999"
authors = [
  { name="Dion Moult", email="dion@thinkmoult.com" },
]
description = "IFC patching utility"
readme = "README.md"
keywords = ["IFC", "BIM"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
]
dependencies = ["ifcopenshell", "toposort", "numpy"]

[project.urls]
Homepage = "http://ifcopenshell.org"
Documentation = "https://docs.ifcopenshell.org"
Issues = "https://github.com/IfcOpenShell/IfcOpenShell/issues"

[tool.setuptools.packages.find]
include = ["ifcpatch*"]
exclude = ["test*"]
