[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ifctester"
version = "0.0.0"
authors = [
  { name="Dion Moult", email="dion@thinkmoult.com" },
]
description = "IFC model auditing tool with support for IDS"
readme = "README.md"
keywords = ["IFC", "IDS", "BIM"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
]
dependencies = ["ifcopenshell", "python-dateutil", "xmlschema", "numpy"]

[project.urls]
Homepage = "http://ifcopenshell.org"
Documentation = "https://docs.ifcopenshell.org"
Issues = "https://github.com/IfcOpenShell/IfcOpenShell/issues"

[tool.setuptools.packages.find]
include = ["ifctester*"]
exclude = ["test*"]

[tool.setuptools.package-data]
"*" = ["*.*"]
